fix contrast and alt text errors

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ h2 {
 h3 {
     font-family: Alegreya Sans, Anton, 'Times New Roman', Arial;
     font-size: 24px;
-    color: #68829E;
+    color: #4a5c70;
     font-weight: 700;
     text-decoration: underline;
     text-decoration-color: #AEBD38;
@@ -280,7 +280,7 @@ div.card>img {
 /* source w3school arrow: https://www.w3schools.com/howto/howto_css_arrows.asp */
 .arrow {
     margin-right: 5px;
-    border: solid #68829E;
+    border: solid #4a5c70;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 3px;
@@ -427,7 +427,7 @@ dd>p {
         opacity: 0;
         transition: .5s ease;
         background-color: #68829E;
-        border-radius: 1-px;
+        border-radius: 10px;
     }
 
     .pano_container:hover .overlay {
